<resources>
    <string name="app_name">AndroidFall2022</string>
    <string name="hint_email">Please add your email address</string>
    <string name="hint_password">Please add your password</string>
    <string name="login">LOGIN</string>
    <string name="display_account">Email and Password</string>
    <string name="about_android_views">About Android views</string>
    <string name="about_android">About Android</string>
    <string name="accept_termeni_conditii"><![CDATA[Accept termeni & conditii]]></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enable_back_up">Enable back-up</string>
    <string name="open_activity">Open Activity</string>
    <string name="dial">Dial</string>
    <string name="implicit_intent_examples">Implicit Intent Examples</string>
    <string name="website">Website</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_the_second_activity">This is the second activity</string>
    <string name="open_second_activity">Open second activity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>